--- a/back-end/.env
+++ b/back-end/.env
@@ -1,6 +1,5 @@
 # will hold sensitive credentials for things like the MongoDB database
 
-PORT=5000 # express server will use whatever port you specify here
+PORT=3000 # express server will use whatever port you specify here
 FRONT_END_URI=localhost:7000
-DB_CONNECTION_STRING=mongodb://admin:secret@localhost:27017/example-mern-stack-app?authSource=admin
-JWT_SECRET=they_sailed_away_in_a_sieve
+DB_CONNECTION_STRING=mongodb+srv://verse:pass@cluster0.yqgx6.mongodb.net/test
